# Chess

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  agent.cpp  agent.h  camera.cpp  camera.h  chessboard.cpp  chessboard.h  engine.cpp  engine.h  graphics.cpp  graphics.h  main.cpp  piece.cpp  piece.h  sprite.h
assets/: b_bishop.xcf  b_king.xcf  b_knight.xcf  b_pawn.xcf  b_queen.xcf  b_rook.xcf  dark_square.xcf  light_square.xcf  w_bishop.xcf  w_king.xcf  w_knight.xcf  w_pawn.xcf  w_queen.xcf  w_rook.xcf
src/: CMakeLists.txt  agent.cpp  agent.h  chessboard.cpp  chessboard.h  engine.cpp  engine.h  graphics.cpp  graphics.h  main.cpp  piece.cpp  piece.h
test/: CMakeLists.txt  test.cpp
